--- a/application.yml
+++ b/application.yml
@@ -35,5 +35,6 @@ spring:
 info:
   app:
     name: ${spring.application.name}
-    description: Vet-Links ${spring.application.name} Management Service
+    description: Vet-Links ${spring.application.name} Management Service from GitHub
+
     version: 1.0.0
