--- a/application.yml
+++ b/application.yml
@@ -35,7 +35,8 @@ spring:
 info:
   app:
     name: ${spring.application.name}
-    description: Vet-Links ${spring.application.name} Management Service from GitHub new updated
+    description: Vet-Links ${spring.application.name} Management Service from GitHub has been newly updated with Spring Cloud Bus
 
     version: 1.0.0
+
 
