--- a/application.yml
+++ b/application.yml
@@ -1,19 +1,20 @@
-## base yml file for all services in the config service
+## base yml file for all services for local profile in the config service
 eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://discovery:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
-    prefer-ip-address: false
-    hostname: ${HOSTNAME}
+    prefer-ip-address: true
+    hostname: localhost
+    instance-id: ${spring.application.name}:${server.port}
 ## Actuator related configurations
 management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: refresh,busrefresh
 
   endpoint:
     gateway:
@@ -27,7 +28,7 @@ spring:
     stream:
       kafka:
         binder:
-          brokers: kafka:9092
+          brokers: localhost:29092
       default:
         contentType: application/json
         group: ${spring.application.name}-group
@@ -35,9 +36,9 @@ spring:
 info:
   app:
     name: ${spring.application.name}
-    description: Vet-Links ${spring.application.name} Management Service from GitHub Spring Cloud Bus and Wenhooks
-
+    description: Vet-Links ${spring.application.name} Management Service Local
     version: 1.0.0
+
 
 
 
