--- a/application-prod.yml
+++ b/application-prod.yml
@@ -6,8 +6,8 @@ eureka:
     service-url:
       defaultZone: http://discovery:8761/eureka/
   instance:
-    prefer-ip-address: true
-    hostname: localhost
+    prefer-ip-address: false
+    hostname: ${HOSTNAME}
     instance-id: ${spring.application.name}:${server.port}
 ## Actuator related configurations
 management:
@@ -38,4 +38,5 @@ info:
     name: ${spring.application.name}
     description: Vet-Links ${spring.application.name} Management Service Prod
     version: 1.0.0
+
 
