--- a/application.yml
+++ b/application.yml
@@ -14,7 +14,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh,busrefresh
+        include: "*"
 
   endpoint:
     gateway:
@@ -38,6 +38,7 @@ info:
     name: ${spring.application.name}
     description: Vet-Links ${spring.application.name} Management Service Local
     version: 1.0.0
+
 
 
 
