--- a/application.yml
+++ b/application.yml
@@ -36,8 +36,9 @@ spring:
 info:
   app:
     name: ${spring.application.name}
-    description: Vet-Links ${spring.application.name} Management Service Local
+    description: Vet-Links ${spring.application.name} Management Service Local updated
     version: 1.0.0
+
 
 
 
