--- a/application-prod.yml
+++ b/application-prod.yml
@@ -7,7 +7,7 @@ eureka:
       defaultZone: http://discovery:8761/eureka/
   instance:
     prefer-ip-address: false
-    hostname: ${HOSTNAME}
+    hostname: ${spring.application.name}
     instance-id: ${spring.application.name}:${server.port}
 ## Actuator related configurations
 management:
@@ -38,5 +38,6 @@ info:
     name: ${spring.application.name}
     description: Vet-Links ${spring.application.name} Management Service Prod
     version: 1.0.0
+
 
 
