--- a/application-prod.yml
+++ b/application-prod.yml
@@ -13,7 +13,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh,busrefresh,info,health
+        include: health, info, refresh, busrefresh
 
   endpoint:
     gateway:
@@ -37,6 +37,7 @@ info:
     name: ${spring.application.name}
     description: Vet-Links ${spring.application.name} Management Service Prod updated
     version: 1.0.0
+
 
 
 
